refactor: linted all project files

--- a/templates/index.html
+++ b/templates/index.html
@@ -1,7 +1,8 @@
-
-{% extends "temp.html" %}
-
-{% block content %}
-      <h1>Custom Agent Desktop Experience</h1>
-      <div class='center'><a href='Your Authorization url here'><div class='button' style='width:512px;'>Connect To WxCC</div></a></div>
+{% extends "temp.html" %} {% block content %}
+<h1>Custom Agent Desktop Experience</h1>
+<div class="center">
+  <a href="Your Authorization url here"
+    ><div class="button" style="width: 512px">Connect To WxCC</div></a
+  >
+</div>
 {% endblock %}
