--- a/templates/agent_loggedin.html
+++ b/templates/agent_loggedin.html
@@ -1,11 +1,9 @@
-{% extends "temp.html" %}
-
-{% block content %}
-    <h1>Custom Agent Desktop Experience</h1>
-    <div class="center">
-        <form action="/agentlogout" method="post">
-            <button class="button" type="submit">Agent Logout</button>
-        </form>
-    </div>
+{% extends "temp.html" %} {% block content %}
+<h1>Custom Agent Desktop Experience</h1>
+<div class="center">
+  <form action="/agentlogout" method="post">
+    <button class="button" type="submit">Agent Logout</button>
+  </form>
+</div>
 
 {% endblock %}
