--- a/templates/granted.html
+++ b/templates/granted.html
@@ -1,10 +1,8 @@
-{% extends "temp.html" %}
-
-{% block content %}
-    <h1>Custom Agent Desktop Experience</h1>
-    <div class='center'>
-        <form action="/agentlogin" method="post">
-            <button class="button" type="submit">Agent Login</button>
-        </form>
-    </div>
+{% extends "temp.html" %} {% block content %}
+<h1>Custom Agent Desktop Experience</h1>
+<div class="center">
+  <form action="/agentlogin" method="post">
+    <button class="button" type="submit">Agent Login</button>
+  </form>
+</div>
 {% endblock %}
