--- a/templates/temp.html
+++ b/templates/temp.html
@@ -1,16 +1,18 @@
-<!DOCTYPE html>
+<!doctype html>
 <html>
   <head>
     <title>App Permissions Request</title>
-    <meta charset='utf-8'>
-    <link rel='stylesheet' type='text/css' href='/static/css/index.css'>
+    <meta charset="utf-8" />
+    <link rel="stylesheet" type="text/css" href="/static/css/index.css" />
   </head>
   <body>
-    <section class='container'>
-      <div class='center content'>
-        <div class='spacer'></div>
-        <img src='/static/css/webex_logo.png' />
-        <div class='spacer'></div>
+    <section class="container">
+      <div class="center content">
+        <div class="spacer"></div>
+        <img src="/static/css/webex_logo.png" />
+        <div class="spacer"></div>
         {% block content %}{% endblock %}
+      </div>
+    </section>
   </body>
 </html>
