--- a/templates/temp.html
+++ b/templates/temp.html
@@ -12,6 +12,7 @@
         <img src="/static/css/webex_logo.png" />
         <div class="spacer"></div>
         {% block content %}{% endblock %}
+      </div>
     </section>
   </body>
 </html>
